--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,12 @@
   <artifactId>Library</artifactId>
   <version>1.0</version>
   <packaging>pom</packaging>
-
   <modules>
     <module>core</module>
     <module>ui</module>
   </modules>
+  <properties>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+  </properties>
 </project>
